# packetframe

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  qemu-verifier.yml  release.yml
conf/: example.conf
crates/cli/: Cargo.toml
crates/cli/debian/: packetframe.service
crates/cli/src/: breaker.rs  feasibility.rs  fib_cli.rs  loader.rs  main.rs  metrics.rs  probe.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  lib.rs  module.rs
crates/common/src/fib/: mod.rs
crates/common/src/probe/: bpf.rs  mod.rs
crates/modules/fast-path/: Cargo.toml  build.rs
crates/modules/fast-path/bpf/: Cargo.toml  rust-toolchain.toml
crates/modules/fast-path/bpf/.cargo/: config.toml
crates/modules/fast-path/bpf/src/: fib.rs  finalize.rs  main.rs  maps.rs
crates/modules/fast-path/examples/: bmp_probe.rs
crates/modules/fast-path/src/: breaker.rs  lib.rs  linux_impl.rs  metrics.rs  pin.rs  reconcile.rs  registry.rs
crates/modules/fast-path/src/fib/: controller.rs  hash.rs  inspect.rs  integrity.rs  mod.rs  netlink_neigh.rs  programmer.rs  route_source_bgp.rs  route_source_bmp.rs  types.rs
crates/modules/fast-path/tests/: attach.rs  fib_comparison.rs  fib_fixtures.rs  fib_hash_vectors.rs  fib_programmer_integration.rs  fixtures.rs  neigh_resolver_netns.rs  netns.rs  route_source_bgp_addpath.rs  verifier.rs
crates/modules/fast-path/tests/common/: mod.rs
crates/modules/probe/: Cargo.toml  build.rs
crates/modules/probe/bpf/: Cargo.toml  rust-toolchain.toml
crates/modules/probe/bpf/.cargo/: config.toml
crates/modules/probe/bpf/src/: main.rs
crates/modules/probe/src/: lib.rs
crates/modules/probe/tests/: load_attach.rs
docs/runbooks/: custom-fib.md  mss-clamp.md  reconfigure.md  tail-call-architecture.md
