[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/cli",
    "crates/modules/fast-path",
]
# The BPF crate lives at `crates/modules/fast-path/bpf/` and is deliberately
# excluded from the workspace. It targets `bpfel-unknown-none` and needs a
# pinned nightly toolchain; pulling it into the workspace would force the
# rest of the tree onto nightly and break host cargo commands. `build.rs`
# in `crates/modules/fast-path/` invokes a nested cargo to build it.
exclude = [
    "crates/modules/fast-path/bpf",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
# MSRV. Deliberately behind the rust-toolchain.toml pin (which is the
# latest stable) so a contributor with a slightly older toolchain still
# builds. CI always runs against the latest stable — see
# `.github/workflows/ci.yml` `RUST_STABLE`.
rust-version = "1.85"
license = "GPL-3.0-or-later"
repository = "https://github.com/unredacted/packetframe"

[workspace.dependencies]
packetframe-common = { path = "crates/common" }
packetframe-fast-path = { path = "crates/modules/fast-path" }

anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
libc = "0.2"
flate2 = "1.0"
signal-hook = "0.4"

# aya stack — userspace + BPF + build integration. Pinned tight per
# SPEC.md §7.1: aya has had breaking API changes across minor versions.
# Bump via reviewed PR rather than caret ranges.
aya = "=0.13.1"
aya-log = "=0.2.1"
aya-build = "=0.1.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
