[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/cli",
    "crates/modules/fast-path",
    "crates/modules/probe",
]
# BPF crates live at `crates/modules/*/bpf/` and are deliberately
# excluded from the workspace. They target `bpfel-unknown-none` and
# need a pinned nightly toolchain; pulling them into the workspace
# would force the rest of the tree onto nightly and break host cargo
# commands. Each parent crate's `build.rs` invokes a nested cargo.
exclude = [
    "crates/modules/fast-path/bpf",
    "crates/modules/probe/bpf",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
# MSRV. Deliberately behind the rust-toolchain.toml pin (which is the
# latest stable) so a contributor with a slightly older toolchain still
# builds. CI always runs against the latest stable — see
# `.github/workflows/ci.yml` `RUST_STABLE`.
rust-version = "1.85"
license = "GPL-3.0-or-later"
repository = "https://github.com/unredacted/packetframe"

[workspace.dependencies]
packetframe-common = { path = "crates/common" }
packetframe-fast-path = { path = "crates/modules/fast-path" }
packetframe-probe = { path = "crates/modules/probe" }

anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
libc = "0.2"
flate2 = "1.0"
signal-hook = "0.4"

# aya stack — userspace + BPF + build integration. Pinned tight per
# SPEC.md §7.1: aya has had breaking API changes across minor versions.
# Bump via reviewed PR rather than caret ranges.
aya = "=0.13.1"
aya-log = "=0.2.1"
aya-build = "=0.1.3"

# Option F control plane (Phase 2+). Tokio is scoped to the minimum
# feature set needed by NeighborResolver + RouteController: async TCP
# for BMP (Phase 3), netlink I/O for neighbor events, bounded mpsc
# channels between subsystems, cooperative shutdown. `full` pulls in
# tokio-fs and process machinery we don't need; keeping this lean keeps
# build times and binary size reasonable on cross targets.
tokio = { version = "1.52", default-features = false, features = ["rt-multi-thread", "net", "sync", "time", "macros"] }
tokio-util = { version = "0.7", default-features = false }
# rtnetlink is our async netlink client for RTM_NEWNEIGH / RTM_DELNEIGH
# and link-state events. It layers on netlink-packet-route which we also
# pull directly for message parsing where rtnetlink's helpers don't
# cover what we need. Both pinned tight — rtnetlink has had message-
# shape changes across minor versions and we rely on specific constants.
rtnetlink = "0.21"
netlink-packet-route = "0.30"
futures = "0.3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
