[package]
name = "packetframe-fast-path"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PacketFrame fast-path module (BPF object via build.rs; loader wiring lands in PR #4)"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
packetframe-common.workspace = true
anyhow.workspace = true
tracing.workspace = true

# aya (userspace) is Linux-only (uses netlink, SYS_bpf, etc.) so the
# dev-dep is cfg-gated — matches how the probe code in `crates/common`
# handles platform. macOS dev loops still `cargo test` cleanly.
[target.'cfg(target_os = "linux")'.dev-dependencies]
aya.workspace = true
