[package]
name = "packetframe-fast-path"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PacketFrame fast-path module (BPF object via build.rs; loader wiring lands in PR #4)"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
packetframe-common.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
libc.workspace = true

# aya (userspace) is Linux-only (uses netlink, SYS_bpf, etc.); the
# loader implementation is cfg-gated accordingly. Non-Linux builds
# (macOS dev) compile without aya and have `load`/`attach` return
# NotImplemented.
[target.'cfg(target_os = "linux")'.dependencies]
aya.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
aya.workspace = true
