[package]
name = "packetframe-fast-path"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "PacketFrame fast-path module (BPF object via build.rs; loader wiring lands in PR #4)"
build = "build.rs"

[lib]
path = "src/lib.rs"

[dependencies]
packetframe-common.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
# bgpkit-parser + bytes are cross-platform: the BMP parser itself
# doesn't depend on OS-specific APIs, only the TCP listener (Linux)
# does. Keeping the parser cross-platform lets the `bmp_probe`
# example binary run on macOS dev loops against captured frames.
bgpkit-parser.workspace = true
bytes.workspace = true
ipnet.workspace = true

# aya (userspace) is Linux-only (uses netlink, SYS_bpf, etc.); the
# loader implementation is cfg-gated accordingly. Non-Linux builds
# (macOS dev) compile without aya and have `load`/`attach` return
# NotImplemented.
#
# Option F control plane (Phase 2+): tokio + rtnetlink are also
# Linux-only here because the only consumer is the netlink-based
# NeighborResolver and (Phase 3) BMP station. Gating keeps the macOS
# dev-loop dependency graph lean.
[target.'cfg(target_os = "linux")'.dependencies]
aya.workspace = true
tokio.workspace = true
tokio-util.workspace = true
rtnetlink.workspace = true
netlink-packet-route.workspace = true
netlink-packet-core.workspace = true
futures.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
aya.workspace = true
tokio.workspace = true
