[package]
name = "packetframe-fast-path-bpf"
version = "0.0.1"
edition = "2021"
# Applies to the stable toolchain; the BPF crate itself uses nightly
# (pinned via rust-toolchain.toml in this directory), but this field
# documents the minimum stable Rust the crate is expected to compile on
# if nightly is unavailable and a maintainer wants to experiment.
rust-version = "1.95"
license = "GPL-3.0-or-later"
publish = false

# An empty `[workspace]` table makes this crate its own workspace root
# so a nested `cargo build` (invoked from our parent's build.rs) does
# not walk up and find the outer workspace. Without this, cargo errors
# "current package believes it's in a workspace when it's not" — the
# outer `workspace.exclude` list alone is not sufficient when cargo is
# invoked from within the excluded directory. See the companion note
# in the root Cargo.toml's `[workspace].exclude`.
[workspace]

[[bin]]
name = "fast-path"
path = "src/main.rs"

[dependencies]
aya-ebpf = "=0.1.1"
network-types = "=0.1.0"

[profile.release]
# BPF programs typically only pass the verifier in release mode — dev-mode
# debuginfo and lack of optimization produce instruction sequences the
# verifier rejects as too long / loopy.
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false

[profile.dev]
opt-level = 3
panic = "abort"
debug = false
overflow-checks = false
